--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>2.1</version>
+  <version>2.2</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>2.2</version>
+      <version>2.3</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
@@ -70,12 +70,12 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>1.6</version>
+      <version>1.7</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
       <artifactId>json-functions</artifactId>
-      <version>1.4</version>
+      <version>1.4.1</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -89,8 +89,13 @@
     </dependency>
     <dependency>
       <groupId>net.pwall.util</groupId>
+      <artifactId>date-output</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.util</groupId>
       <artifactId>int-output</artifactId>
-      <version>1.1</version>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -109,7 +114,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-test</artifactId>
-      <version>1.4</version>
+      <version>2.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
