--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>2.4</version>
+  <version>2.5</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>2.4</version>
+      <version>2.5</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>1.8</version>
+      <version>1.8.1</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -114,7 +114,13 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-test</artifactId>
-      <version>2.0.1</version>
+      <version>2.0.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.util</groupId>
+      <artifactId>immutables</artifactId>
+      <version>2.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
