--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>2.5</version>
+  <version>3.0</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>2.5</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
@@ -70,12 +70,17 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>1.8.1</version>
+      <version>1.9</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
       <artifactId>json-functions</artifactId>
-      <version>1.4.2</version>
+      <version>1.5</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.json</groupId>
+      <artifactId>json-co-functions</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -94,8 +99,18 @@
     </dependency>
     <dependency>
       <groupId>net.pwall.util</groupId>
+      <artifactId>co-date-output</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.util</groupId>
       <artifactId>int-output</artifactId>
       <version>1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>net.pwall.util</groupId>
+      <artifactId>co-int-output</artifactId>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -106,6 +121,12 @@
       <artifactId>kotlin-reflect</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <artifactId>kotlinx-coroutines-core</artifactId>
+      <version>1.6.2</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <!-- This is required because kotlin-test-junit 1.6.10 includes junit 4.12 -->
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -114,7 +135,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-test</artifactId>
-      <version>2.0.2</version>
+      <version>2.0.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
