--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>4.2</version>
+  <version>4.3</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>io.kjson</groupId>
     <artifactId>kjson-maven</artifactId>
-    <version>2.1</version>
+    <version>3.0</version>
   </parent>
 
   <properties>
@@ -63,7 +63,12 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>5.4</version>
+      <version>5.6</version>
+    </dependency>
+    <dependency>
+      <groupId>io.kjson</groupId>
+      <artifactId>kjson-optional</artifactId>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
@@ -73,7 +78,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>4.2</version>
+      <version>4.4</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -83,7 +88,7 @@
     <dependency>
       <groupId>net.pwall.json</groupId>
       <artifactId>json-co-functions</artifactId>
-      <version>1.1</version>
+      <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -103,7 +108,7 @@
     <dependency>
       <groupId>net.pwall.util</groupId>
       <artifactId>co-date-output</artifactId>
-      <version>1.0</version>
+      <version>1.1</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.util</groupId>
@@ -113,7 +118,7 @@
     <dependency>
       <groupId>net.pwall.util</groupId>
       <artifactId>co-int-output</artifactId>
-      <version>2.0</version>
+      <version>2.1</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -128,12 +133,6 @@
       <artifactId>kotlinx-coroutines-core</artifactId>
       <version>1.6.2</version>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <!-- This is required because kotlin-test-junit 1.6.10 includes junit 4.12 -->
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
