--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>4.4</version>
+  <version>5.0</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>io.kjson</groupId>
     <artifactId>kjson-maven</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
   </parent>
 
   <properties>
@@ -63,7 +63,12 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>5.6</version>
+      <version>5.7</version>
+    </dependency>
+    <dependency>
+      <groupId>io.kjson</groupId>
+      <artifactId>kjson-stream</artifactId>
+      <version>1.4</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
@@ -78,7 +83,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>4.4</version>
+      <version>4.5</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -137,7 +142,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-test</artifactId>
-      <version>3.6</version>
+      <version>3.7</version>
       <scope>test</scope>
     </dependency>
     <dependency>
