--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>9.1</version>
+  <version>9.2</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -63,12 +63,12 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>9.1</version>
+      <version>9.2</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-stream</artifactId>
-      <version>3.1</version>
+      <version>3.2</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
@@ -83,7 +83,7 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>8.3</version>
+      <version>8.6</version>
     </dependency>
     <dependency>
       <groupId>net.pwall.json</groupId>
@@ -143,6 +143,12 @@
       <artifactId>kotlinx-coroutines-core</artifactId>
       <version>1.8.1</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.kstuff</groupId>
+      <artifactId>should-test</artifactId>
+      <version>4.3</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
