--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>kjson</artifactId>
-  <version>9.3</version>
+  <version>9.4</version>
   <name>Reflection-based JSON serialization and deserialization for Kotlin</name>
   <description>Reflection-based JSON serialization and deserialization for Kotlin</description>
   <packaging>jar</packaging>
@@ -13,7 +13,7 @@
   <parent>
     <groupId>io.kjson</groupId>
     <artifactId>kjson-maven</artifactId>
-    <version>5.0</version>
+    <version>6.0</version>
   </parent>
 
   <properties>
@@ -63,72 +63,72 @@
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-core</artifactId>
-      <version>9.2</version>
+      <version>10.0</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-stream</artifactId>
-      <version>3.2</version>
+      <version>3.3</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-optional</artifactId>
-      <version>1.2</version>
+      <version>1.3</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-annotations</artifactId>
-      <version>1.4</version>
+      <version>1.5</version>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-pointer</artifactId>
-      <version>8.6</version>
+      <version>8.7</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.json</groupId>
+      <groupId>io.jstuff</groupId>
       <artifactId>json-functions</artifactId>
-      <version>1.9</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.json</groupId>
+      <groupId>io.kstuff</groupId>
       <artifactId>json-co-functions</artifactId>
-      <version>1.5</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.json</groupId>
+      <groupId>io.jstuff</groupId>
       <artifactId>json-validation</artifactId>
-      <version>2.1</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.text</groupId>
+      <groupId>io.jstuff</groupId>
       <artifactId>textmatcher</artifactId>
-      <version>2.4</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.util</groupId>
+      <groupId>io.jstuff</groupId>
       <artifactId>date-output</artifactId>
-      <version>1.3</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.util</groupId>
+      <groupId>io.kstuff</groupId>
       <artifactId>co-date-output</artifactId>
-      <version>1.5</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.util</groupId>
+      <groupId>io.jstuff</groupId>
       <artifactId>int-output</artifactId>
-      <version>2.1</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.util</groupId>
+      <groupId>io.kstuff</groupId>
       <artifactId>co-int-output</artifactId>
-      <version>2.6</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
-      <groupId>net.pwall.util</groupId>
+      <groupId>io.jstuff</groupId>
       <artifactId>immutables</artifactId>
-      <version>2.5</version>
+      <version>3.0</version>
     </dependency>
     <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
@@ -147,13 +147,13 @@
     <dependency>
       <groupId>io.kstuff</groupId>
       <artifactId>should-test</artifactId>
-      <version>4.3</version>
+      <version>4.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.kjson</groupId>
       <artifactId>kjson-test</artifactId>
-      <version>4.0</version>
+      <version>4.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
